operation functions development

--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,4 @@
 {
-    
+    "add_to_apple_music_path": "C:/Users/lereo/Music/Apple Music/Media/Automatically Add to Apple Music",
+    "unknown_songs_folder_path": "C:/Users/lereo/Music/Apple Music/Media/Music/Unknown Artist/Unknown Album"
 }
